# gpui-workbench

./: .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_PLAN.md  PROMPT_build.md  PROMPT_plan.md  PROMPT_spec.md  loop.sh  zed_gpui_refs
.claude/commands/: ralph-build.md  ralph-plan.md  ralph-reqs.md  ralph-spec.md
.planning/: RISK-REVIEW-TEMPLATE.md  plan.md
.planning/archive/: ChatGPT-Component_workbench_types.md  claude-gpui-workbench-plan.md  codex-gpui-workbench-plan.md  gpui-studio-master-plan.md  merged-gpui-workbench-plan-outline-A.md  merged-gpui-workbench-plan-outline-B.md
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/studio/: Cargo.toml
apps/studio/src/: main.rs
crates/assets/: Cargo.toml
crates/assets/src/: lib.rs
crates/components/: Cargo.toml
crates/components/src/: button.rs  checkbox.rs  contracts.rs  dialog.rs  dropdown_menu.rs  input.rs  lib.rs  popover.rs  radio.rs  select.rs  tabs.rs  textarea.rs  toast.rs  tooltip.rs
crates/components/tests/: contract_tests.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: focus.rs  keyboard.rs  lib.rs  popover.rs  state.rs
crates/registry/: Cargo.toml
crates/registry/src/: lib.rs  plan.rs
crates/story/: Cargo.toml
crates/story/src/: lib.rs  matrix.rs  stories.rs
crates/story/src/stories/: button_story.rs  checkbox_story.rs  dialog_story.rs  dropdown_menu_story.rs  input_story.rs  popover_story.rs  radio_story.rs  select_story.rs  tabs_story.rs  textarea_story.rs  toast_story.rs  tooltip_story.rs
crates/story/tests/: story_tests.rs
crates/theme/: Cargo.toml
crates/theme/src/: engine.rs  lib.rs  tokens.rs
docs/: ARCHITECTURE.md  CONTRACTS.md  GATE-EVIDENCE.md  PROVENANCE.md
docs/ADR/: 000-template.md  001-workspace-layout.md
scripts/: check-provenance.sh
specs/: cli.md  component-contracts.md  component-library.md  delivery-gates.md  design-tokens.md  governance.md  performance-budgets.md  plan-contract.md  primitives.md  registry.md  source-of-truth.md  story-framework.md  workbench.md
specs/phase-0.5/: cli.md  poc-components.md  primitives.md  registry.md  story-framework.md  theme-engine.md  workbench-app.md
specs/phase-1/: cli-hardening.md  core-9-components.md
specs/phase-2/: distribution.md  extended-library.md  priority-components.md
