[package]
name = "studio"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
anyhow.workspace = true
serde_json.workspace = true
log.workspace = true
components.workspace = true
primitives.workspace = true
registry.workspace = true
theme.workspace = true
story.workspace = true
assets.workspace = true
